external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/duplicate_top_level_field/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
Err(TOML parse error at line 5, column 1
  |
5 | [package]
  | ^
Duplicate key `package` in document root

While parsing a Table Header
)
